--- a/POO_TchatSystem/src/gui/.gitignore
+++ b/POO_TchatSystem/src/gui/.gitignore
@@ -2,3 +2,7 @@
 /GUIConfig.class
 /PseudoBox.class
 /PseudoWindow.class
+/mavenproject1UI.class
+/mavenproject1UI$1.class
+/MainWindow$1.class
+/PseudoPanel.class
