auto-refresh conversations OK

--- a/POO_TchatSystem/src/gui/.gitignore
+++ b/POO_TchatSystem/src/gui/.gitignore
@@ -9,3 +9,6 @@
 /ConversationPanel.class
 /ConnectedListPanel.class
 /ConnectedListPanel$1.class
+/ConversationPanel$updateTaskClass.class
+/ConversationPanel$1.class
+/ConversationPanel$2.class
