connected list refresh OK + conversation refresh fix OK

--- a/POO_TchatSystem/src/gui/.gitignore
+++ b/POO_TchatSystem/src/gui/.gitignore
@@ -12,3 +12,5 @@
 /ConversationPanel$updateTaskClass.class
 /ConversationPanel$1.class
 /ConversationPanel$2.class
+/ConnectedListPanel$2.class
+/User.class
