--- a/POO_TchatSystem/src/properties/config.properties
+++ b/POO_TchatSystem/src/properties/config.properties
@@ -5,8 +5,10 @@ db.url=jdbc:mysql://srv-bdens.insa-toulouse.fr/tp_servlet_004
 db.table=Messages
 
 ######## Port Ranges config ########
-pr.presence_server=63000
-pr.start_port=65001
-pr.end_port=65100
+pr.presence_server=50000
+
 pr.start_port_ext=64000
-pr.end_port_ext=64999
+pr.end_port_ext=64500
+
+pr.start_port_in=64501
+pr.end_port_in=65001
