--- a/POO_Server/src/properties/config.properties
+++ b/POO_Server/src/properties/config.properties
@@ -1,8 +1,8 @@
 #### Port properties ####
-listening_port=63000
-start_general=64000
-end_general=65100
-#start_port_ext = start_general (implicit)
-end_port_ext=64999
-start_port_in=65001
-#end_port_in = en_general (implicit)
+listening_port_try_start=50000
+listening_port_try_end=51000
+
+start_port_ext=64000
+end_port_ext=64500
+start_port_in=64501
+end_port_in=65001
